GL/Projet_GL/src/test/deca/syntax/invalid/sansObjet/empty_while_cond.deca
// Test : syntax_invalid_empty_while_condition
// But : interdire une condition vide dans un while.
// Type d'erreur : erreur syntaxique
// Résultat attendu : erreur de syntaxe.

{
    while () {
        
    }
}